- export Ghost
- fixed small knob stroke width
- aligned well ghost apply gain knob

v3.41
- export GhostViewer

v3.42
- export SampleDelay

v3.43
- Spatializer adjustements (aborted)

v3.44
- Spatializer adjustement

v3.45
- Rollover improvements

v3.46
"infrasonicviewer" => "infrasonic-viewer"

v3.47
- Ghost: legend for the meters (and signs "+" and "x")

v3.48
- StereoWidth: "WIDTH LIMIT" -> "WIDTH LIMITER"

v3.49
- StereoWidth: new "BASS TO MONO" checkbox

v3.50
- Rebalance stereo (WIP)

v3.51
- Rebalance stereo

v4.0.0
- first Morpho GUI
- "SOURCE" part

v4.1.0
- Morpho GUI: "SYNTHESIS" part

v4.2.0
- Fine tuned Morpho GUI
- bars to separate sections
- started moving elements to the right layers

v4.3.0
- export .png elements

v4.3.1
- source "NOISE MIX" -> "NOISE"
- fixed so spectrogram knobs aligment
 
v4.4.0
- "LOOP": global, not by source anymore
- FIX: fixed spacing and export for SYNTH and SOURCES long buttons

v4.4.1
- FIX: fixed "live source" / "file source", for more consistency

Rollover menu: 5c75eb
Rollover buttons: 6a6affff
Knobs: 617bf7


=== TODO ===
- TODO: drop down menu, make items in lower case (no upper case as it is currently)
First letter in upper case. Find a good font (see the font of the Ghost-X buttons)
- TODO: rollover on help button
- TODO: programatically: adjust style of Ghost meters (borders etc.)
- TODO: for drop down menu, set blue to real rollover blue color
rollover blue: 6a6affff and set text to black
- TODO: check plugs CPU % when "resting"
- TODO: check gui refresh for all plugins
- TODO: pass valgrind for mem for all
(already done for the last ones, update the list!)
- NOTE: blue for all widgets: lighter blue, not the BlueLab title one
Good to keep 2 blue: 1 for the logo, 1 for the "active" color and knob color
- IDEA: for GUI resize plugs, do not make several backgrounds
Just position programmatically "BlueLab + plugname", and "help button" (as bitmaps)
- NOTE: Spatializer: xy pad center lines are rounded at the end
